@@ -1,3 +1,6 @@
+2011-12-11  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/deps.c: fixed bug #2911936: gpasm removes *.d files while compiling
+
 2011-12-10  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/directive.c, gpasm/gperror.c, gpasm/gperror.h:
     fixed bug #3153394: PIC18 - relative branch - revision v595:
